RDProject:finished first form

--- a/index.html
+++ b/index.html
@@ -55,14 +55,40 @@
                     <p>81 m<sup>2</sup></p>
                     <h3>Repair Cost:</h3>
                     <p>Upon request</p>
+                    <img src="images/image 2.1.png" alt="completed project">
                 </div>
            </div>
         </div>
         </div>
     </section>
     <section>
-        <div>
+        <div class="">
             <h3>online control</h3>
+        <div class ="">
+        <img src="images/camera.svg.svg" width="200" height="200" alt="security camera logo">
+        </div>
+        <img src="images/workman.png" alt="">
+
+        <hr>
+
+        <p>At each facility, a camera is installed that broadcasts the progress of work on the clock. At any time, you can go to our website and monitor the progress of work in your apartment. You can watch the live broadcast from one of our facilities!
+            Leave a request below and you will receive a link to the broadcast.</p>
+        <form class="form">
+            <p>
+            <label for="name">Name</label>
+            <input id="name" type="text" placeholder="What is your name:">
+            </p>
+            <p>
+            <label for="phone">Phone</label>
+            <input id="phone" type="text" placeholder="Your phone number">
+            </p>
+            <p>
+            <input type="Submit" value="Submit">
+            </p>
+            <p>
+            <input type="checkbox"> I agree to the processing of personal data
+            </p>
+        </form>    
         </div>
     </section>         
     
